=> Navbar changes and fixes

--- a/src/main/webapp/app/views/dashboard.html
+++ b/src/main/webapp/app/views/dashboard.html
@@ -1,10 +1,17 @@
+<header ng-include="'app/views/app-header.html'"></header>
+
 <div class="container">
 	<h3>Dashboard</h3>
-	<div>
-		<button type="submit" name="logoutSubmit" id="logoutBtn"
-			title="Logout" value="Logout" class="btn btn-primary"
-			ng-click="logout()">
-			<i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;Logout
-		</button>
+	<div class="panel panel-primary">
+		<div class="panel-heading">
+			<h3 class="panel-title">
+				App title
+				<!-- <a href="" class="pull-right"><i class="fa fa-plus"
+					aria-hidden="true"></i>&nbsp;Add a Day</a> -->
+			</h3>
+		</div>
+		<div class="panel-body">
+			<h3>App is coming soon</h3>
+		</div>
 	</div>
 </div>
