--- a/src/main/webapp/app/views/login.html
+++ b/src/main/webapp/app/views/login.html
@@ -59,7 +59,7 @@
 				</div>
 				<div class="text-center">
 					<button type="submit" name="loginSubmit" id="loginBtn"
-						title="Login" value="Login" class="btn btn-primary"
+						title="Login" class="btn btn-primary"
 						ng-disabled="loginForm.$invalid" ng-click="loginRegisteredUser()">
 						<i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Login
 					</button>
