--- a/src/main/webapp/app/views/signup.html
+++ b/src/main/webapp/app/views/signup.html
@@ -172,7 +172,7 @@
 					</div>
 					<div class="text-center">
 						<button type="submit" name="signupSubmit" id="signupBtn"
-							title="Signup" value="Signup" class="btn btn-primary"
+							title="Signup" class="btn btn-primary"
 							ng-disabled="signupForm.$invalid || password != confirmPassword"
 							ng-click="registerNewUser()">
 							<i class="fa fa-sign-in" aria-hidden="true"></i>&nbsp;Signup
